#170 - Fix overlapping images on home page

--- a/less/_components/homepage.less
+++ b/less/_components/homepage.less
@@ -102,7 +102,7 @@
     margin-bottom:18px;
     margin: 0 auto 20px;
     width: 90%;
-    @media (min-width: @screen-xs-min) {
+    @media (min-width: @screen-md-min) {
       width: fit-content;
       margin: 0 auto;
     }
